refactor: Json to proto message refactoring (#2085)
* refactor: Capitalize deep constants in JsonToProtoMessage and make them final

* refactor: Extract magic variables to constants

* refactor: Remove topLevel parameter from JsonToProtoMessage methods

* refactor: Remove unnecessary variables "message" from JsonToProtoMessage methods

* refactor: Remove unnecessary casts from JsonToProtoMessage methods and remove usage of soon deprecated (Java 9) Long constructor

* refactor: Remove unnecessary LOG field from JsonToProtoMessage

* refactor: Properly reference to static field INSTANCE in JsonToProtoMessage

* refactor: Use enhanced for in JsonToProtoMessage

* refactor: Use equalsIgnoreCase for JSON string boolean values in JsonToProtoMessage and use primitives for booleans

* refactor: Replace fail variable with failure extracted to method in JsonToProtoMessage repeated fields.

* refactor: Inline json scope variable and ignoreUnknownFields variable in JsonToProtoMessage

* 🦉 Updates from OwlBot post-processor

See https://github.com/googleapis/repo-automation-bots/blob/main/packages/owl-bot/README.md

---------

Co-authored-by: Owl Bot <gcf-owl-bot[bot]@users.noreply.github.com>