@@ -25,13 +25,11 @@ import com.google.protobuf.ByteString;
 import com.google.protobuf.Descriptors.Descriptor;
 import com.google.protobuf.Descriptors.FieldDescriptor;
 import com.google.protobuf.DynamicMessage;
-import com.google.protobuf.Message;
 import com.google.protobuf.UninitializedMessageException;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.logging.Logger;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
@@ -50,9 +48,8 @@ import org.threeten.bp.temporal.TemporalAccessor;
  */
 public class JsonToProtoMessage implements ToProtoConverter<Object> {
   public static final JsonToProtoMessage INSTANCE = new JsonToProtoMessage();
-  private static final Logger LOG = Logger.getLogger(JsonToProtoMessage.class.getName());
-  private static int NUMERIC_SCALE = 9;
-  private static ImmutableMap<FieldDescriptor.Type, String> FieldTypeToDebugMessage =
+  private static final int NUMERIC_SCALE = 9;
+  private static final ImmutableMap<FieldDescriptor.Type, String> FIELD_TYPE_TO_DEBUG_MESSAGE =
       new ImmutableMap.Builder<FieldDescriptor.Type, String>()
           .put(FieldDescriptor.Type.BOOL, "boolean")
           .put(FieldDescriptor.Type.BYTES, "bytes")
@@ -62,7 +59,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
           .put(FieldDescriptor.Type.STRING, "string")
           .put(FieldDescriptor.Type.MESSAGE, "object")
           .build();
-  private static final DateTimeFormatter timestampFormatter =
+  private static final DateTimeFormatter TIMESTAMP_FORMATTER =
       new DateTimeFormatterBuilder()
           .parseLenient()
           .append(DateTimeFormatter.ofPattern("yyyy[/][-]MM[/][-]dd"))
@@ -103,7 +100,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
           .toFormatter()
           .withZone(ZoneOffset.UTC);
 
-  /** You can use {@link JsonToProtoMessage.INSTANCE} instead */
+  /** You can use {@link #INSTANCE} instead */
   public JsonToProtoMessage() {}
 
   public static DynamicMessage convertJsonToProtoMessage(
@@ -152,7 +149,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
     Preconditions.checkNotNull(protoSchema, "Protobuf descriptor is null.");
     Preconditions.checkState(json.length() != 0, "JSONObject is empty.");
 
-    return convertToProtoMessage(protoSchema, null, json, "root", /*topLevel=*/ true, false);
+    return convertToProtoMessage(protoSchema, null, json, "root", false);
   }
 
   /**
@@ -172,13 +169,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
     Preconditions.checkNotNull(tableSchema, "TableSchema is null.");
     Preconditions.checkState(json.length() != 0, "JSONObject is empty.");
 
-    return convertToProtoMessage(
-        protoSchema,
-        tableSchema.getFieldsList(),
-        json,
-        "root",
-        /*topLevel=*/ true,
-        /*ignoreUnknownFields*/ false);
+    return convertToProtoMessage(protoSchema, tableSchema.getFieldsList(), json, "root", false);
   }
 
   /**
@@ -200,12 +191,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
     Preconditions.checkState(json.length() != 0, "JSONObject is empty.");
 
     return convertToProtoMessage(
-        protoSchema,
-        tableSchema.getFieldsList(),
-        json,
-        "root",
-        /*topLevel=*/ true,
-        ignoreUnknownFields);
+        protoSchema, tableSchema.getFieldsList(), json, "root", ignoreUnknownFields);
   }
 
   /**
@@ -214,7 +200,6 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
    * @param protoSchema
    * @param json
    * @param jsonScope Debugging purposes
-   * @param topLevel checks if root level has any matching fields.
    * @throws IllegalArgumentException when JSON data is not compatible with proto descriptor.
    */
   private DynamicMessage convertToProtoMessage(
@@ -222,7 +207,6 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
       List<TableFieldSchema> tableSchema,
       JSONObject json,
       String jsonScope,
-      boolean topLevel,
       boolean ignoreUnknownFields)
       throws IllegalArgumentException {
 
@@ -231,8 +215,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
     if (jsonNames == null) {
       return protoMsg.build();
     }
-    for (int i = 0; i < jsonNames.length; i++) {
-      String jsonName = jsonNames[i];
+    for (String jsonName : jsonNames) {
       // We want lowercase here to support case-insensitive data writes.
       // The protobuf descriptor that is used is assumed to have all lowercased fields
       String jsonFieldLocator = jsonName.toLowerCase();
@@ -327,12 +310,12 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
     switch (fieldDescriptor.getType()) {
       case BOOL:
         if (val instanceof Boolean) {
-          protoMsg.setField(fieldDescriptor, (Boolean) val);
+          protoMsg.setField(fieldDescriptor, val);
           return;
         }
         if (val instanceof String
-            && ("true".equals(((String) val).toLowerCase())
-                || "false".equals(((String) val).toLowerCase()))) {
+            && ("true".equalsIgnoreCase(((String) val))
+                || "false".equalsIgnoreCase(((String) val)))) {
           protoMsg.setField(fieldDescriptor, Boolean.parseBoolean((String) val));
           return;
         }
@@ -422,7 +405,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
                   CivilTimeEncoder.encodePacked64DatetimeMicros(LocalDateTime.parse((String) val)));
               return;
             } else if (val instanceof Long) {
-              protoMsg.setField(fieldDescriptor, (Long) val);
+              protoMsg.setField(fieldDescriptor, val);
               return;
             }
           } else if (fieldSchema.getType() == TableFieldSchema.Type.TIME) {
@@ -432,7 +415,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
                   CivilTimeEncoder.encodePacked64TimeMicros(LocalTime.parse((String) val)));
               return;
             } else if (val instanceof Long) {
-              protoMsg.setField(fieldDescriptor, (Long) val);
+              protoMsg.setField(fieldDescriptor, val);
               return;
             }
           } else if (fieldSchema.getType() == TableFieldSchema.Type.TIMESTAMP) {
@@ -442,26 +425,26 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
                 protoMsg.setField(fieldDescriptor, parsed.longValue() * 10000000);
                 return;
               }
-              TemporalAccessor parsedTime = timestampFormatter.parse((String) val);
+              TemporalAccessor parsedTime = TIMESTAMP_FORMATTER.parse((String) val);
               protoMsg.setField(
                   fieldDescriptor,
                   parsedTime.getLong(ChronoField.INSTANT_SECONDS) * 1000000
                       + parsedTime.getLong(ChronoField.MICRO_OF_SECOND));
               return;
             } else if (val instanceof Long) {
-              protoMsg.setField(fieldDescriptor, (Long) val);
+              protoMsg.setField(fieldDescriptor, val);
               return;
             } else if (val instanceof Integer) {
-              protoMsg.setField(fieldDescriptor, new Long((Integer) val) * 10000000);
+              protoMsg.setField(fieldDescriptor, Long.valueOf((Integer) val) * 10000000);
               return;
             }
           }
         }
         if (val instanceof Integer) {
-          protoMsg.setField(fieldDescriptor, new Long((Integer) val));
+          protoMsg.setField(fieldDescriptor, Long.valueOf((Integer) val));
           return;
         } else if (val instanceof Long) {
-          protoMsg.setField(fieldDescriptor, (Long) val);
+          protoMsg.setField(fieldDescriptor, val);
           return;
         }
         if (val instanceof String) {
@@ -483,7 +466,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
           }
         }
         if (val instanceof Integer) {
-          protoMsg.setField(fieldDescriptor, (Integer) val);
+          protoMsg.setField(fieldDescriptor, val);
           return;
         }
         if (val instanceof String) {
@@ -496,7 +479,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
         break;
       case STRING:
         if (val instanceof String) {
-          protoMsg.setField(fieldDescriptor, (String) val);
+          protoMsg.setField(fieldDescriptor, val);
           return;
         }
         break;
@@ -515,7 +498,6 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
         break;
       case MESSAGE:
         if (val instanceof JSONObject) {
-          Message.Builder message = protoMsg.newBuilderForField(fieldDescriptor);
           protoMsg.setField(
               fieldDescriptor,
               convertToProtoMessage(
@@ -523,7 +505,6 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
                   fieldSchema == null ? null : fieldSchema.getFieldsList(),
                   json.getJSONObject(exactJsonKeyName),
                   currentScope,
-                  /*topLevel =*/ false,
                   ignoreUnknownFields));
           return;
         }
@@ -532,7 +513,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
     throw new IllegalArgumentException(
         String.format(
             "JSONObject does not have a %s field at %s.",
-            FieldTypeToDebugMessage.get(fieldDescriptor.getType()), currentScope));
+            FIELD_TYPE_TO_DEBUG_MESSAGE.get(fieldDescriptor.getType()), currentScope));
   }
 
   /**
@@ -570,24 +551,23 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
     }
     java.lang.Object val;
     int index;
-    boolean fail = false;
     for (int i = 0; i < jsonArray.length(); i++) {
       val = jsonArray.get(i);
       index = i;
       switch (fieldDescriptor.getType()) {
         case BOOL:
           if (val instanceof Boolean) {
-            protoMsg.addRepeatedField(fieldDescriptor, (Boolean) val);
+            protoMsg.addRepeatedField(fieldDescriptor, val);
           } else if (val instanceof String
-              && ("true".equals(((String) val).toLowerCase())
-                  || "false".equals(((String) val).toLowerCase()))) {
+              && ("true".equalsIgnoreCase(((String) val))
+                  || "false".equalsIgnoreCase(((String) val)))) {
             protoMsg.addRepeatedField(fieldDescriptor, Boolean.parseBoolean((String) val));
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
         case BYTES:
-          Boolean added = false;
+          boolean added = false;
           if (fieldSchema != null && fieldSchema.getType() == TableFieldSchema.Type.NUMERIC) {
             if (val instanceof String) {
               protoMsg.addRepeatedField(
@@ -674,7 +654,7 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
                             + "] could not be converted to byte[]."));
               }
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           }
           break;
@@ -685,9 +665,9 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
                   fieldDescriptor,
                   CivilTimeEncoder.encodePacked64DatetimeMicros(LocalDateTime.parse((String) val)));
             } else if (val instanceof Long) {
-              protoMsg.addRepeatedField(fieldDescriptor, (Long) val);
+              protoMsg.addRepeatedField(fieldDescriptor, val);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else if (fieldSchema != null && fieldSchema.getType() == TableFieldSchema.Type.TIME) {
             if (val instanceof String) {
@@ -695,9 +675,9 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
                   fieldDescriptor,
                   CivilTimeEncoder.encodePacked64TimeMicros(LocalTime.parse((String) val)));
             } else if (val instanceof Long) {
-              protoMsg.addRepeatedField(fieldDescriptor, (Long) val);
+              protoMsg.addRepeatedField(fieldDescriptor, val);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else if (fieldSchema != null
               && fieldSchema.getType() == TableFieldSchema.Type.TIMESTAMP) {
@@ -706,32 +686,32 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
               if (parsed != null) {
                 protoMsg.addRepeatedField(fieldDescriptor, parsed.longValue() * 10000000);
               } else {
-                TemporalAccessor parsedTime = timestampFormatter.parse((String) val);
+                TemporalAccessor parsedTime = TIMESTAMP_FORMATTER.parse((String) val);
                 protoMsg.addRepeatedField(
                     fieldDescriptor,
                     parsedTime.getLong(ChronoField.INSTANT_SECONDS) * 1000000
                         + parsedTime.getLong(ChronoField.MICRO_OF_SECOND));
               }
             } else if (val instanceof Long) {
-              protoMsg.addRepeatedField(fieldDescriptor, (Long) val);
+              protoMsg.addRepeatedField(fieldDescriptor, val);
             } else if (val instanceof Integer) {
-              protoMsg.addRepeatedField(fieldDescriptor, new Long((Integer) val) * 10000000);
+              protoMsg.addRepeatedField(fieldDescriptor, ((Integer) val) * 10000000);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else if (val instanceof Integer) {
-            protoMsg.addRepeatedField(fieldDescriptor, new Long((Integer) val));
+            protoMsg.addRepeatedField(fieldDescriptor, Long.valueOf((Integer) val));
           } else if (val instanceof Long) {
-            protoMsg.addRepeatedField(fieldDescriptor, (Long) val);
+            protoMsg.addRepeatedField(fieldDescriptor, val);
           } else if (val instanceof String) {
             Long parsed = Longs.tryParse((String) val);
             if (parsed != null) {
               protoMsg.addRepeatedField(fieldDescriptor, parsed);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
         case INT32:
@@ -742,26 +722,26 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
             } else if (val instanceof Integer || val instanceof Long) {
               protoMsg.addRepeatedField(fieldDescriptor, ((Number) val).intValue());
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else if (val instanceof Integer) {
-            protoMsg.addRepeatedField(fieldDescriptor, (Integer) val);
+            protoMsg.addRepeatedField(fieldDescriptor, val);
           } else if (val instanceof String) {
             Integer parsed = Ints.tryParse((String) val);
             if (parsed != null) {
               protoMsg.addRepeatedField(fieldDescriptor, parsed);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
         case STRING:
           if (val instanceof String) {
-            protoMsg.addRepeatedField(fieldDescriptor, (String) val);
+            protoMsg.addRepeatedField(fieldDescriptor, val);
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
         case DOUBLE:
@@ -772,15 +752,14 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
             if (parsed != null) {
               protoMsg.addRepeatedField(fieldDescriptor, parsed);
             } else {
-              fail = true;
+              throwWrongFieldType(fieldDescriptor, currentScope, index);
             }
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
         case MESSAGE:
           if (val instanceof JSONObject) {
-            Message.Builder message = protoMsg.newBuilderForField(fieldDescriptor);
             protoMsg.addRepeatedField(
                 fieldDescriptor,
                 convertToProtoMessage(
@@ -788,19 +767,20 @@ public class JsonToProtoMessage implements ToProtoConverter<Object> {
                     fieldSchema == null ? null : fieldSchema.getFieldsList(),
                     jsonArray.getJSONObject(i),
                     currentScope,
-                    /*topLevel =*/ false,
                     ignoreUnknownFields));
           } else {
-            fail = true;
+            throwWrongFieldType(fieldDescriptor, currentScope, index);
           }
           break;
       }
-      if (fail) {
-        throw new IllegalArgumentException(
-            String.format(
-                "JSONObject does not have a %s field at %s[%d].",
-                FieldTypeToDebugMessage.get(fieldDescriptor.getType()), currentScope, index));
-      }
     }
+  }
+
+  private static void throwWrongFieldType(
+      FieldDescriptor fieldDescriptor, String currentScope, int index) {
+    throw new IllegalArgumentException(
+        String.format(
+            "JSONObject does not have a %s field at %s[%d].",
+            FIELD_TYPE_TO_DEBUG_MESSAGE.get(fieldDescriptor.getType()), currentScope, index));
   }
 }
